--- a/src/views/index.html
+++ b/src/views/index.html
@@ -2,8 +2,14 @@
     <head>
     </head>
     <body>
+        <nav class="mobile">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </nav>
         <canvas></canvas>
-        bonjour salut
+
         <script src="/main.js"></script>
     </body>
 </html>
