--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,5 +1,21 @@
 <html>
     <head>
+        <title>Olivier Mattei, développeur web PHP Symfony / Javascript Angular - freelance - Marseille / Aix</title>
+        <meta name="description" content="Je suis développeur indépendant PHP Symfony et Javascript Angular freelance à Marseille et Aix en Provence."/>
+        <meta property="og:locale" content="fr_FR"/>
+        <meta property="og:type" content="article"/>
+        <meta property="og:title" content="Olivier Mattei, développeur web PHP Symfony / Javascript Angular - freelance - Marseille / Aix"/>
+        <meta property="og:description" content="Je suis développeur indépendant PHP Symfony et Javascript Angular freelance à Marseille et Aix en Provence."/>
+        <meta property="og:url" content="http://oliviermattei.com/"/>
+        <meta property="og:site_name" content="Olivier Mattei, développeur web PHP Symfony / Javascript Angular freelance"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="manifest.json">
+        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="theme-color" content="#ffffff">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     </head>
     <body>
         <nav class="mobile">
@@ -8,6 +24,13 @@
             <span></span>
             <span></span>
         </nav>
+
+        <h1><span class="filigram">DÉVELOPPEUR FREELANCE</span><br/>PHP <span class="separator">/</span> SYMFONY <br /> JAVASCRIPT <span class="separator">/</span> ANGULAR.</h1>
+
+        <!--<section class="description">Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.</section>-->
+        <section class="description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent viverra a arcu vitae posuere. Vivamus leo elit, porttitor quis hendrerit ut, sagittis eget purus. Sed vitae dapibus risus, sed ornare enim. Proin malesuada, nibh ac accumsan pulvinar, mi lorem interdum velit, id sagittis magna diam et tortor. Maecenas iaculis ornare mi, eu dictum mauris.
+        </section>
         <canvas></canvas>
 
         <script src="/main.js"></script>
