--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+
 @import '../../node_modules/bootstrap/scss/functions';
 
 @import 'variables';
@@ -10,4 +12,48 @@
 @import '../../node_modules/bootstrap/scss/utilities';
 
 @import 'hamburger';
-@import 'main';
+:root {
+  font-size: 10px;
+}
+html, body{
+  background: $background;
+  overflow: hidden;
+}
+body{
+  font-family: 'Open Sans', sans-serif;
+  color: $font-color;
+  padding: $window-padding;
+  line-height: 2rem;
+  text-align: justify;
+}
+
+h1{
+  margin-top: 200px;
+  font-size: 2.6rem;
+  font-weight: 400;
+
+  .filigram{
+    color: $gray-500;
+    font-size: 1.8rem;
+  }
+  .separator{
+    color: $gray-500;
+    font-size: 3.2rem;
+    font-weight: 300;
+  }
+}
+
+.description{
+  font-size: 1.1rem;
+
+  margin-top: 100px;
+}
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+}
