--- a/src/scss/hamburger.scss
+++ b/src/scss/hamburger.scss
@@ -1,13 +1,13 @@
 @import "variables";
 
-$unit: 12px;
+$height: 20px;
 
 nav.mobile {
-    width: $unit * 3.4;
-    height: $unit * 2.5;
+    width: $height * 1.25;
+    height: $height;
     position: absolute;
-    left: 50px;
-    top: 50px;
+    left: $height;
+    top: $height;
     transform: rotate(0deg);
     transition: .25s ease-in-out;
     cursor: pointer;
@@ -16,7 +16,7 @@ nav.mobile {
     & > span {
         display: block;
         position: absolute;
-        height: 6px;
+        height: $height / 5;
         width: 100%;
         background: $black;
         //border-radius: 7px;
@@ -26,22 +26,22 @@ nav.mobile {
         transition: .25s ease-in-out;
 
         &:nth-child(1) {
-            top: 0px;
+            top: 0;
         }
 
         &:nth-child(2), &:nth-child(3) {
-            top: $unit;
+            top: $height / 5 * 2;
         }
 
         &:nth-child(4) {
-            top: $unit * 2;
+            top: $height / 5 * 4;
         }
 
     }
     &.open {
         & > span:nth-child(1) {
-            top: $unit;
-            width: 0%;
+            top: $height;
+            width: 0;
             left: 50%;
         }
 
@@ -53,8 +53,8 @@ nav.mobile {
             transform: rotate(-45deg);
         }
         & > span:nth-child(4) {
-            top: $unit;
-            width: 0%;
+            top: $height;
+            width: 0;
             left: 50%;
         }
     }
