--- a/src/views/index.html
+++ b/src/views/index.html
@@ -18,20 +18,27 @@
         <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     </head>
     <body>
-        <nav class="mobile">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-        </nav>
 
-        <h1><span class="filigram">DÉVELOPPEUR FREELANCE</span><br/>PHP <span class="separator">/</span> SYMFONY <br /> JAVASCRIPT <span class="separator">/</span> ANGULAR.</h1>
+        <section class="first-frame">
+            <nav class="mobile">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+            </nav>
 
-        <!--<section class="description">Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.</section>-->
-        <section class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent viverra a arcu vitae posuere. Vivamus leo elit, porttitor quis hendrerit ut, sagittis eget purus. Sed vitae dapibus risus, sed ornare enim. Proin malesuada, nibh ac accumsan pulvinar, mi lorem interdum velit, id sagittis magna diam et tortor. Maecenas iaculis ornare mi, eu dictum mauris.
+            <h1><span class="filigram">DÉVELOPPEUR FREELANCE</span><br/>PHP <span class="separator">/</span> SYMFONY <br /> JAVASCRIPT <span class="separator">/</span> ANGULAR.</h1>
+
+            <!--<section class="description">Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.</section>-->
+            <section class="description">
+                Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.
+            </section>
         </section>
-        <canvas></canvas>
+
+        <section class="work">
+            <h2><span class="separator">/</span> WORK.</h2>
+        </section>
+
 
         <script src="/main.js"></script>
     </body>
