--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -22,13 +22,14 @@ html, body{
 body{
   font-family: 'Open Sans', sans-serif;
   color: $font-color;
-  padding: $window-padding;
+
   line-height: 2rem;
   text-align: justify;
 }
 
-h1{
-  margin-top: 200px;
+h1, h2{
+
+  margin-top: 260px;
   font-size: 2.6rem;
   font-weight: 400;
 
@@ -43,10 +44,24 @@ h1{
   }
 }
 
-.description{
-  font-size: 1.1rem;
 
-  margin-top: 100px;
+.first-frame{
+  padding: $window-padding;
+  .description{
+    font-size: 1.2rem;
+
+    margin-top: 80px;
+  }
+
+}
+
+.work{
+    background: $gray-200;
+
+    h2{
+        text-align: right;
+    }
+
 }
 canvas {
   position: absolute;
