--- a/src/views/index.html
+++ b/src/views/index.html
@@ -36,7 +36,11 @@
         </section>
 
         <section class="work">
-            <h2><span class="separator">/</span> WORK.</h2>
+            <div class="bevel"></div>
+            <div class="container">
+                <h2><span class="separator">/</span> WORK.</h2>
+            </div>
+            <div class="bevel bottom"></div>
         </section>
 
 
