--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -46,6 +46,7 @@ h1, h2{
 
 
 .first-frame{
+  display: none;
   padding: $window-padding;
   .description{
     font-size: 1.2rem;
@@ -56,7 +57,39 @@ h1, h2{
 }
 
 .work{
+
+    padding: 100px auto 100px auto;
+  position: relative;
+
+  .bevel{
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    width: 100%;
+    height: 100px;
+    border: none;
+    font: normal 100%/normal Arial, Helvetica, sans-serif;
     background: $gray-200;
+    color: rgba(0,0,0,1);
+    text-overflow: clip;
+    transform:    skewY(-10deg);
+    transform-origin: 100% 100% 0;
+
+    &.bottom{
+      bottom: 0;
+      top: auto;
+    }
+  }
+
+  .container{
+    background: $gray-200;
+  }
+
+
+
 
     h2{
         text-align: right;
