--- a/src/views/index.html
+++ b/src/views/index.html
@@ -36,8 +36,8 @@
         </section>
 
         <section class="work">
-            <div class="bevel"></div>
-            <div class="container">
+            <div class="bevel up"></div>
+            <div class="content">
                 <h2><span class="separator">/</span> WORK.</h2>
             </div>
             <div class="bevel bottom"></div>
