--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,7 +3,7 @@
         <title>Olivier Mattei, développeur web PHP Symfony / Javascript Angular - freelance - Marseille / Aix</title>
         <meta name="description" content="Je suis développeur indépendant PHP Symfony et Javascript Angular freelance à Marseille et Aix en Provence."/>
         <meta property="og:locale" content="fr_FR"/>
-        <meta property="og:type" content="article"/>
+        <meta property="og:type" content="div"/>
         <meta property="og:title" content="Olivier Mattei, développeur web PHP Symfony / Javascript Angular - freelance - Marseille / Aix"/>
         <meta property="og:description" content="Je suis développeur indépendant PHP Symfony et Javascript Angular freelance à Marseille et Aix en Provence."/>
         <meta property="og:url" content="http://oliviermattei.com/"/>
@@ -16,6 +16,7 @@
         <meta name="theme-color" content="#ffffff">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
     </head>
     <body>
 
@@ -27,20 +28,50 @@
                 <span></span>
             </nav>
 
-            <h1><span class="filigram">DÉVELOPPEUR FREELANCE</span><br/>PHP <span class="separator">/</span> SYMFONY <br /> JAVASCRIPT <span class="separator">/</span> ANGULAR.</h1>
+            <div class="content ">
+                <h1><span class="filigram">DÉVELOPPEUR FREELANCE</span><br/>PHP <span class="separator">/</span> SYMFONY <br /> JAVASCRIPT <span class="separator">/</span> ANGULAR.</h1>
 
-            <!--<section class="description">Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.</section>-->
-            <section class="description">
-                Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.
-            </section>
+                <!--<section class="description">Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.</section>-->
+                <section class="description">
+                    Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.
+                </section>
+            </div>
+
         </section>
 
         <section class="work">
-            <div class="bevel up"></div>
+            <h2><span class="separator">/</span> WORK.</h2>
+
             <div class="content">
-                <h2><span class="separator">/</span> WORK.</h2>
+                <div>
+                    <img src="/images/3.png" alt="" >
+                    <aside>
+                        <h3>share woods</h3>
+                        <div class="techno">Symfony, angular, javascript</div>
+                        <div class="description">Développement de projets SaaS avec le framework PHP Symfony. Modélisation et conception complète d'API REST. Conception du front de vos applications directement dans Symfony ou externalisé avec Angular dans le cadre d'une API.</div>
+                    </aside>
+                </div>
+                <div>
+                    <img src="/images/3.png" alt="" >
+                    <aside>
+                        <h3>share woods</h3>
+                        <div class="techno">Symfony, angular, javascript</div>
+                        <div class="description">je tente le coup du chapeau</div>
+                    </aside>
+                </div><div>
+                    <img src="/images/3.png" alt="" >
+                    <aside>
+                        <h3>share woods</h3>
+                        <div class="techno">Symfony, angular, javascript</div>
+                        <div class="description">je tente le coup du chapeau</div>
+                    </aside>
+                </div>
+
             </div>
-            <div class="bevel bottom"></div>
+
+            <!-- <div class="more">
+                Voir plus de projet.
+            </div> -->
         </section>
 
 
