--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -10,80 +10,115 @@
 @import 'hamburger';
 
 :root {
-    font-size: 10px;
-}
-
-html, body {
-    background: $background;
-    overflow: hidden;
+    font-size: 17px;
+    -webkit-overflow-scrolling: touch;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+text-rendering: optimizeLegibility !important;
+-webkit-font-smoothing: antialiased !important;
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    color: $font-color;
+    // overflow: hidden;
+    // color: $font-color;
 
     line-height: 2rem;
     text-align: justify;
+    font-family: 'Open Sans', sans-serif;
+
 }
 
 h1, h2 {
-    font-size: 2.6rem;
+    font-size: 2rem;
     font-weight: 400;
 
     .filigram {
         color: $gray-500;
-        font-size: 1.8rem;
+        font-size: 1rem;
     }
     .separator {
         color: $gray-500;
-        font-size: 3.2rem;
+        font-size: 2.8rem;
         font-weight: 300;
     }
 }
 
 .first-frame {
-    display: none;
+    height: 116%;
     padding: $window-padding;
-    .description {
-        font-size: 1.2rem;
+    display: flex;
+    align-items: center;
 
-        margin-top: 80px;
+
+
+    display: none;
+    .content{
+        .description {
+            font-size: 1.2rem;
+
+            margin-top: 80px;
+        }
     }
-
 }
 
 .work {
-    top: 240px;
-
-    position: relative;
-    padding: 10px 0 40px 0;
     background: $gray-200;
-    box-sizing: content-box;
-    width: 100%;
-    font: normal 100%/normal Arial, Helvetica, sans-serif;
-    text-overflow: clip;
-    transform:    skewY(-5deg);
-
-
+    min-height: 300px;
+    widows: 100vw;
+    clip-path: $clip-path;
+    padding: 4% 0 24% 0;
+    overflow: hidden;
 
     .content {
-        transform:    skewY(5deg);
-        min-height: 100px;
-        padding: 0 20px;
+        display: flex;
+        flex-direction: column;
+        // overflow-x: auto;
+
+
+        & > div{
+            min-width: $img-size;
+            margin: auto;
+
+            img{
+                display: none;
+                /**
+                    width: $img-size;
+
+                    box-shadow: 0px 5px 25px 0px rgba(0,0,0,0.17);
+                    margin: 0 $img-spacer;
+
+                    &:first-child{
+                        margin-left:$img-spacer *2;
+                    }
+
+                    &:last-child{
+                        margin-right:$img-spacer *2;
+                }*/
+            }
+            h3{
+
+            }
+            .techno{
+             color: $gray-500;
+            }
+        }
+
     }
+    // .more{
+    //     padding-left: 24px;
+    //     line-height: 16px;
+    //     margin:$img-spacer 0 0 $img-spacer*2;
+    //     background: url(/images/chevron-circle-right.svg);
+    //     background-size: 16px 16px;
+    //     background-repeat:no-repeat;
+    //     color:$gray-500;
+    // }
+
 
     h2 {
         text-align: right;
+        margin: $img-spacer*2 $img-spacer;
     }
 
-}
-
-canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100%;
-    width: 100%;
 }
