--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,117 +8,4 @@
 @import '../../node_modules/bootstrap/scss/grid';
 @import '../../node_modules/bootstrap/scss/utilities';
 @import 'hamburger';
-
-:root {
-    font-size: 17px;
-    -webkit-overflow-scrolling: touch;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
-text-rendering: optimizeLegibility !important;
--webkit-font-smoothing: antialiased !important;
-}
-
-body {
-    // overflow: hidden;
-    // color: $font-color;
-
-    line-height: 2rem;
-    text-align: justify;
-    font-family: 'Open Sans', sans-serif;
-
-}
-
-h1, h2 {
-    font-size: 2rem;
-    font-weight: 400;
-
-    .filigram {
-        color: $gray-500;
-        font-size: 1rem;
-    }
-    .separator {
-        color: $gray-500;
-        font-size: 2.8rem;
-        font-weight: 300;
-    }
-}
-
-.first-frame {
-    height: 116%;
-    padding: $window-padding;
-    display: flex;
-    align-items: center;
-
-
-
-    display: none;
-    .content{
-        .description {
-            font-size: 1.2rem;
-
-            margin-top: 80px;
-        }
-    }
-}
-
-.work {
-    background: $gray-200;
-    min-height: 300px;
-    widows: 100vw;
-    clip-path: $clip-path;
-    padding: 4% 0 24% 0;
-    overflow: hidden;
-
-    .content {
-        display: flex;
-        flex-direction: column;
-        // overflow-x: auto;
-
-
-        & > div{
-            min-width: $img-size;
-            margin: auto;
-
-            img{
-                display: none;
-                /**
-                    width: $img-size;
-
-                    box-shadow: 0px 5px 25px 0px rgba(0,0,0,0.17);
-                    margin: 0 $img-spacer;
-
-                    &:first-child{
-                        margin-left:$img-spacer *2;
-                    }
-
-                    &:last-child{
-                        margin-right:$img-spacer *2;
-                }*/
-            }
-            h3{
-
-            }
-            .techno{
-             color: $gray-500;
-            }
-        }
-
-    }
-    // .more{
-    //     padding-left: 24px;
-    //     line-height: 16px;
-    //     margin:$img-spacer 0 0 $img-spacer*2;
-    //     background: url(/images/chevron-circle-right.svg);
-    //     background-size: 16px 16px;
-    //     background-repeat:no-repeat;
-    //     color:$gray-500;
-    // }
-
-
-    h2 {
-        text-align: right;
-        margin: $img-spacer*2 $img-spacer;
-    }
-
-}
+@import 'main';
