--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,81 +1,224 @@
 <html>
-    <head>
-        <title>Olivier Mattei, développeur web PHP Symfony / Javascript Angular - freelance - Marseille / Aix</title>
-        <meta name="description" content="Je suis développeur indépendant PHP Symfony et Javascript Angular freelance à Marseille et Aix en Provence."/>
-        <meta property="og:locale" content="fr_FR"/>
-        <meta property="og:type" content="div"/>
-        <meta property="og:title" content="Olivier Mattei, développeur web PHP Symfony / Javascript Angular - freelance - Marseille / Aix"/>
-        <meta property="og:description" content="Je suis développeur indépendant PHP Symfony et Javascript Angular freelance à Marseille et Aix en Provence."/>
-        <meta property="og:url" content="http://oliviermattei.com/"/>
-        <meta property="og:site_name" content="Olivier Mattei, développeur web PHP Symfony / Javascript Angular freelance"/>
-        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-        <link rel="manifest" href="manifest.json">
-        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="theme-color" content="#ffffff">
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
-    </head>
-    <body>
+	<head>
+		<title>Olivier Mattei, développeur web PHP Symfony / Javascript Angular - freelance - Marseille / Aix</title>
+		<meta name="description" content="Je suis développeur indépendant PHP Symfony et Javascript Angular freelance à Marseille et Aix en Provence."/>
+		<meta property="og:locale" content="fr_FR"/>
+		<meta property="og:type" content="div"/>
+		<meta property="og:title" content="Olivier Mattei, développeur web PHP Symfony / Javascript Angular - freelance - Marseille / Aix"/>
+		<meta property="og:description" content="Je suis développeur indépendant PHP Symfony et Javascript Angular freelance à Marseille et Aix en Provence."/>
+		<meta property="og:url" content="http://oliviermattei.com/"/>
+		<meta property="og:site_name" content="Olivier Mattei, développeur web PHP Symfony / Javascript Angular freelance"/>
+		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+		<link rel="manifest" href="manifest.json">
+		<link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="theme-color" content="#ffffff">
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
+	</head>
+	<body>
+		<header>
+			<div>OLIVIER <b>MATTEI</b>
+				<nav class="mobile">
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</nav>
+			</div>
+		</header>
+		<section class="first-frame">
+			<div class="content ">
+				<h1>
+					<span class="filigram">développeur freelance</span><br/>
+					php <span class="separator">symfony</span> <br/>
+					& javascript.<br/>
+					<span class="filigram">Marseille et sa région</span></h1>
 
-        <section class="first-frame">
-            <nav class="mobile">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </nav>
+				<div class="description">
+					Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en
+					développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.
+				</div>
+			</div>
 
-            <div class="content ">
-                <h1><span class="filigram">DÉVELOPPEUR FREELANCE</span><br/>PHP <span class="separator">/</span> SYMFONY <br /> JAVASCRIPT <span class="separator">/</span> ANGULAR.</h1>
+		</section>
 
-                <!--<section class="description">Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.</section>-->
-                <section class="description">
-                    Développeur freelance passionné et expérimenté (plus de 7 ans), je mets mes compétences à votre service afin de vous proposer un travail de qualité. Mes connaissances en développement web & mobile, me permettent, quel que soit votre projet de vous proposer des solutions adaptées sur le plan technique.
-                </section>
-            </div>
+		<section class="prestations tilt">
+			<h3 class="separator">prestation.</h3>
 
-        </section>
+			<h2>Application web & Api </h2>
+			<p>Conception et développement de projets SaaS / desktop adaptés à vos besoins. Modélisation d'API REST / GraphQL complète basées sur Symfony ou NESTJS et réalisation de votre front avec VueJS.</p>
 
-        <section class="work">
-            <h2><span class="separator">/</span> WORK.</h2>
+			<h2>Sites internet et e-commerce</h2>
+			<p>Réalisation de votre site vitrine. Création de thèmes et mise en place de votre boutique en ligne sur mesure avec Shopify.
+				Maximisation de la vue du site grâce à l'approche <a href="https://www.ionos.fr/digitalguide/sites-internet/web-design/mobile-first-la-nouvelle-approche-du-web-design/" target="_blank">mobile first</a>.</p>
 
-            <div class="content">
-                <div>
-                    <img src="/images/3.png" alt="" >
-                    <aside>
-                        <h3>share woods</h3>
-                        <div class="techno">Symfony, angular, javascript</div>
-                        <div class="description">Développement de projets SaaS avec le framework PHP Symfony. Modélisation et conception complète d'API REST. Conception du front de vos applications directement dans Symfony ou externalisé avec Angular dans le cadre d'une API.</div>
-                    </aside>
-                </div>
-                <div>
-                    <img src="/images/3.png" alt="" >
-                    <aside>
-                        <h3>share woods</h3>
-                        <div class="techno">Symfony, angular, javascript</div>
-                        <div class="description">je tente le coup du chapeau</div>
-                    </aside>
-                </div><div>
-                    <img src="/images/3.png" alt="" >
-                    <aside>
-                        <h3>share woods</h3>
-                        <div class="techno">Symfony, angular, javascript</div>
-                        <div class="description">je tente le coup du chapeau</div>
-                    </aside>
-                </div>
+		</section>
 
-            </div>
+		<section class="skills">
+			<h3 class="separator">compétences.</h3>
 
-            <!-- <div class="more">
-                Voir plus de projet.
-            </div> -->
-        </section>
+			<h2>technologies</h2>
+			<ul>
+				<li>Javascript / Typescript</li>
+				<li>PHP 5 / 7 (Programmation objet)</li>
+				<li>HTML5, Sass / CSS3</li>
+				<li>PHPUnit / Jest</li>
+			</ul>
+
+			<h2>framework / cms</h2>
+			<ul>
+				<li>Node.js / NestJS</li>
+				<li>VueJS / AngularJS</li>
+				<li>Symfony 3 / 4</li>
+				<li>Wordpress</li>
+				<li>Shopify</li>
+			</ul>
+
+			<h2>API</h2>
+			<ul>
+				<li>GraphQL / Apollo</li>
+				<li>REST</li>
+				<li>JWT / Auth0</li>
+			</ul>
+
+			<h2>Base de données</h2>
+			<ul>
+				<li>PostgreSQL</li>
+				<li>MySQL</li>
+				<li>SQLite</li>
+				<li>MongoDB</li>
+			</ul>
+
+			<h2>Server</h2>
+			<ul>
+				<li>Docker</li>
+				<li>Nodejs / Nginx</li>
+				<li>RabbitMQ</li>
+			</ul>
+
+			<h2>Gestion de projet</h2>
+			<ul>
+				<li>Agile / Scrum</li>
+				<li>Git</li>
+				<li>Suite Atlassian</li>
+			</ul>
 
 
-        <script src="/main.js"></script>
-    </body>
+		</section>
+
+		<section class="works tilt">
+			<h3 class="separator">réalisation.</h3>
+
+			<div class="content">
+				<div class="slider">
+					<article class="card">
+						<div class="inner">
+							<div>
+								<img src=".q/../images/1.png" alt="">
+
+							</div>
+
+							<aside>
+								<h2>share woods</h2>
+								<div class="techno">Symfony, angular, javascript</div>
+								<div class="description">Développement de projets SaaS avec le framework PHP Symfony. Modélisation et conception complète d'API REST. Conception du front de vos
+									applications directement dans Symfony ou externalisé avec Angular dans le cadre d'une API.
+								</div>
+							</aside>
+						</div>
+						<div class="name">share woods</div>
+					</article>
+
+					<article class="card">
+						<div class="inner">
+							<div>
+								<img src=".q/../images/2.png" alt="">
+
+							</div>
+
+							<aside>
+								<h2>share woods</h2>
+								<div class="techno">Symfony, angular, javascript</div>
+								<div class="description">Développement de projets SaaS avec le framework PHP Symfony. Modélisation et conception complète d'API REST. Conception du front de vos
+									applications directement dans Symfony ou externalisé avec Angular dans le cadre d'une API.
+								</div>
+							</aside>
+						</div>
+						<div class="name">share woods</div>
+					</article>
+
+					<article class="card">
+						<div class="inner">
+							<div>
+								<img src=".q/../images/3.png" alt="">
+
+							</div>
+
+							<aside>
+								<h2>share woods</h2>
+								<div class="techno">Symfony, angular, javascript</div>
+								<div class="description">Développement de projets SaaS avec le framework PHP Symfony. Modélisation et conception complète d'API REST. Conception du front de vos
+									applications directement dans Symfony ou externalisé avec Angular dans le cadre d'une API.
+								</div>
+							</aside>
+						</div>
+						<div class="name">share woods</div>
+					</article>
+
+
+				</div>
+			</div>
+		</section>
+
+		<section class="contact">
+			<h3>Contact.</h3>
+<!--			<h2>coordonnées</h2>-->
+<!--			<ul>-->
+<!--				<li>Olivier Mattei</li>-->
+<!--				<li>Développeur freelance Full-stack</li>-->
+<!--			</ul>-->
+
+<!--			<h2 class="">Informations</h2>-->
+<!--			<p>J'ai actuellement disponible pour des projets cours.</p>-->
+
+			<div class="mail">
+				<input class="yourName" type="text" placeholder="Votre nom" title="Your Name"/>
+				<input class="yourEmail" type="email" placeholder="Votre Email" title="Your Email"/>
+				<input class="yourMessage" type="text" placeholder="Votre Message" title="Your Message"/>
+
+				<a class="button" href="mailto:olmattei+portfolio@gmail.com" target="_blank">
+					<svg class="icon icon-paper-plane-o"><use xlink:href="#icon-paper-plane-o"></use>
+						<symbol id="icon-paper-plane-o" viewBox="0 0 28 28">
+							<title>paper-plane-o</title>
+							<path d="M27.563 0.172c0.328 0.234 0.484 0.609 0.422 1l-4 24c-0.047 0.297-0.234 0.547-0.5 0.703-0.141 0.078-0.313 0.125-0.484 0.125-0.125 0-0.25-0.031-0.375-0.078l-8.234-3.359-4.656 5.109c-0.187 0.219-0.453 0.328-0.734 0.328-0.125 0-0.25-0.016-0.359-0.063-0.391-0.156-0.641-0.531-0.641-0.938v-7.063l-7.375-3.016c-0.359-0.141-0.594-0.469-0.625-0.859-0.031-0.375 0.172-0.734 0.5-0.922l26-15c0.328-0.203 0.75-0.187 1.062 0.031zM22.219 23.594l3.453-20.672-22.406 12.922 5.25 2.141 13.484-9.984-7.469 12.453z"></path>
+						</symbol></svg></a>
+			</div>
+
+
+			<footer>
+				<a href="//www.github.com/oliviermattei" target="_blank" title="github">
+					<svg class="icon icon-github"><use xlink:href="#icon-github"></use><symbol id="icon-github" viewBox="0 0 24 28">
+						<title>github</title>
+						<path d="M12 2c6.625 0 12 5.375 12 12 0 5.297-3.437 9.797-8.203 11.391-0.609 0.109-0.828-0.266-0.828-0.578 0-0.391 0.016-1.687 0.016-3.297 0-1.125-0.375-1.844-0.812-2.219 2.672-0.297 5.484-1.313 5.484-5.922 0-1.313-0.469-2.375-1.234-3.219 0.125-0.313 0.531-1.531-0.125-3.187-1-0.313-3.297 1.234-3.297 1.234-0.953-0.266-1.984-0.406-3-0.406s-2.047 0.141-3 0.406c0 0-2.297-1.547-3.297-1.234-0.656 1.656-0.25 2.875-0.125 3.187-0.766 0.844-1.234 1.906-1.234 3.219 0 4.594 2.797 5.625 5.469 5.922-0.344 0.313-0.656 0.844-0.766 1.609-0.688 0.313-2.438 0.844-3.484-1-0.656-1.141-1.844-1.234-1.844-1.234-1.172-0.016-0.078 0.734-0.078 0.734 0.781 0.359 1.328 1.75 1.328 1.75 0.703 2.141 4.047 1.422 4.047 1.422 0 1 0.016 1.937 0.016 2.234 0 0.313-0.219 0.688-0.828 0.578-4.766-1.594-8.203-6.094-8.203-11.391 0-6.625 5.375-12 12-12zM4.547 19.234c0.031-0.063-0.016-0.141-0.109-0.187-0.094-0.031-0.172-0.016-0.203 0.031-0.031 0.063 0.016 0.141 0.109 0.187 0.078 0.047 0.172 0.031 0.203-0.031zM5.031 19.766c0.063-0.047 0.047-0.156-0.031-0.25-0.078-0.078-0.187-0.109-0.25-0.047-0.063 0.047-0.047 0.156 0.031 0.25 0.078 0.078 0.187 0.109 0.25 0.047zM5.5 20.469c0.078-0.063 0.078-0.187 0-0.297-0.063-0.109-0.187-0.156-0.266-0.094-0.078 0.047-0.078 0.172 0 0.281s0.203 0.156 0.266 0.109zM6.156 21.125c0.063-0.063 0.031-0.203-0.063-0.297-0.109-0.109-0.25-0.125-0.313-0.047-0.078 0.063-0.047 0.203 0.063 0.297 0.109 0.109 0.25 0.125 0.313 0.047zM7.047 21.516c0.031-0.094-0.063-0.203-0.203-0.25-0.125-0.031-0.266 0.016-0.297 0.109s0.063 0.203 0.203 0.234c0.125 0.047 0.266 0 0.297-0.094zM8.031 21.594c0-0.109-0.125-0.187-0.266-0.172-0.141 0-0.25 0.078-0.25 0.172 0 0.109 0.109 0.187 0.266 0.172 0.141 0 0.25-0.078 0.25-0.172zM8.937 21.438c-0.016-0.094-0.141-0.156-0.281-0.141-0.141 0.031-0.234 0.125-0.219 0.234 0.016 0.094 0.141 0.156 0.281 0.125s0.234-0.125 0.219-0.219z"></path>
+					</symbol></svg>
+				</a>
+
+				<a href="//www.linkedin.com/in/olmattei" target="_blank" title="github">
+					<svg class="icon icon-linkedin-square"><use xlink:href="#icon-linkedin-square"></use>
+						<symbol id="icon-linkedin-square" viewBox="0 0 24 28">
+							<title>linkedin-square</title>
+							<path d="M3.703 22.094h3.609v-10.844h-3.609v10.844zM7.547 7.906c-0.016-1.062-0.781-1.875-2.016-1.875s-2.047 0.812-2.047 1.875c0 1.031 0.781 1.875 2 1.875h0.016c1.266 0 2.047-0.844 2.047-1.875zM16.688 22.094h3.609v-6.219c0-3.328-1.781-4.875-4.156-4.875-1.937 0-2.797 1.078-3.266 1.828h0.031v-1.578h-3.609s0.047 1.016 0 10.844v0h3.609v-6.062c0-0.313 0.016-0.641 0.109-0.875 0.266-0.641 0.859-1.313 1.859-1.313 1.297 0 1.813 0.984 1.813 2.453v5.797zM24 6.5v15c0 2.484-2.016 4.5-4.5 4.5h-15c-2.484 0-4.5-2.016-4.5-4.5v-15c0-2.484 2.016-4.5 4.5-4.5h15c2.484 0 4.5 2.016 4.5 4.5z"></path>
+						</symbol>
+					</svg>
+				</a>
+			</footer>
+
+		</section>
+
+		<script src="/main.js"></script>
+	</body>
 </html>
 
