--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,12 +3,17 @@
 $background: $white;
 $font-color: $black;
 
-$window-padding: 5vw;
+
+$window-padding: 2rem;
+
+//header
+$header-height: 3rem;
+$menu-height: 1.8rem;
 
 //work
 $clip-path: polygon(0 50px, 100% 0%, 100% calc(100% - 50px), 0 100%);
 $img-spacer: 6vw;
-$img-size: 60vw;
+$img-size: 60%;
 
 .gray-500{
   color: $gray-500;
